<resources>
    <string name="app_name">B07 Project</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome">
        Welcome
    </string>

    <string name="sign_up">
        Sign Up
    </string>

    <string name="login">
        Log in
    </string>

    <string name="createMessage">
        Create an Account
    </string>

    <string name="loginMessage">
        Log In
    </string>

    <string name="student">
        Create as Student
    </string>

    <string name="admin">
        Create as Admin
    </string>

    <string name="studentLogin">
        Log In as Student
    </string>

    <string name="adminLogin">
        Log In as Admin
    </string>

    <string name="name">
        Enter your full name.
    </string>

    <string name="email">
        Enter your UofT email.
    </string>

    <string name="password">
        Enter your password.
    </string>
    <string name="signUpInstead">No Account? <u>Click here to sign-up instead!</u></string>
    <string name="loginInstead">Have an Account? <u>Click here to log-in instead!</u></string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="complaint_name">Name</string>
    <string name="complaint_title">This is the complaint title</string>
    <string name="complaint_username">Username</string>
    <string name="complaint_description">Complaint description</string>
    <string name="back_text">Back</string>
    <string name="title_activity_sign_up2">SignUp2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="create_announcements">Create Announcements</string>
    <string name="events">Events</string>
    <string name="schedule_event_name_text">Event Name</string>
    <string name="schedule_event_date_text">Select Date:</string>
    <string name="schedule_event_description_text">Description</string>
    <string name="schedule_event_location_text">Location</string>
    <string name="schedule_event_partici_limit_text">Participation Limit</string>
    <string name="schedule_event_submit_button">Submit</string>
    <string name="schedule_events">Schedule Events</string>
    <string name="description">Description</string>
    <string name="title_required">Title (Required)</string>
    <string name="submit">Submit</string>

    <string name="announcement_title">Announcement Title</string>
    <string name="announcement_description">Announcement Description</string>

    <string name="view_all_events_button">View all events</string>
    <string name="complaintDate">1900-01-01</string>
    <string name="schedule_an_event_here_text">Schedule an Event Here!</string>
    <string name="admin_schedule_guide_text"><![CDATA[Create an event here ->]]></string>
    <string name="event_name_text">event name</string>
    <string name="event_date_text">date</string>
    <string name="go_back_text">Go Back to Previous Page</string>
    <string name="date_header_text">Date:</string>
    <string name="description_header_text">Description:</string>
    <string name="location_header_text">Location:</string>
    <string name="partici_limit_header_text">Participation Limit:</string>
    <string name="see_registered_users_text">See Registered Users</string>
    <string name="see_feedback_and_ratings_text">See Student Feedback and Ratings</string>
    <string name="eventname_text">Event Name</string>
    <string name="eventlocation_text">Event Location</string>
    <string name="event_participationlimit_text">Event Participation Limit</string>
    <string name="eventdate_text">Event Date</string>
    <string name="eventdescription_text">Event Description</string>
    <string name="back_button_text">Back</string>
    <string name="registered_users_title_text">These users registered your event!</string>
    <string name="go_back_text2">go back</string>
    <string name="user_name_text">User Name</string>
    <string name="feedback_and_ratings_text">FeedBack and Ratings</string>
    <string name="comment_text">Comment:</string>
    <string name="average_rating_text">Nobody has commented on this event yet.</string>
    <string name="total_of_ratings_text">Total # of ratings: 0</string>
</resources>
