<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.complaints.admin.DetailedComplaintFragment"
    android:id="@+id/detailedComplaintFragment"
    android:paddingTop="?attr/actionBarSize">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/complaintTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:lines="1"
        android:text="@string/complaint_title"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/complaintUsername"
        android:autoSizeTextType="uniform"
        android:lines="1"
        android:layout_width="wrap_content"
        android:paddingLeft="10dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/complaint_username"
        android:layout_below="@+id/complaintTitle"/>

    <TextView
        android:id="@+id/complaintDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:textColor="@color/black"
        android:text="@string/complaint_description"
        android:layout_below="@+id/complaintUsername"/>

    <Button
        android:id="@+id/complaint_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_centerHorizontal="true"
        android:gravity="center|bottom"
        android:text="@string/back_text" />

</RelativeLayout>