<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.announcements.view.DetailedAnnouncementsFragment"
    android:id="@+id/adminDetailedAnnouncementsFragment"
    android:paddingTop="?attr/actionBarSize">

    <TextView
        android:id="@+id/adminAnnouncementTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:fontFamily="sans-serif"
        android:lines="1"
        android:padding="10dp"
        android:text="@string/announcement_title"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/adminAnnouncementCreator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adminAnnouncementTitle"
        android:autoSizeTextType="uniform"
        android:lines="1"
        android:paddingLeft="10dp"
        android:text="Creator"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/adminAnnouncementDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adminAnnouncementCreator"
        android:autoSizeTextType="uniform"
        android:lines="1"
        android:paddingLeft="10dp"
        android:text="Date"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/adminAnnouncementDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adminAnnouncementDate"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/announcement_description"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/detailed_announcements_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_centerHorizontal="true"
        android:gravity="center|bottom"
        android:text="@string/back_text" />
</RelativeLayout>